Add pseudo-factoryMethod function
Moved quiz execution code out of main

small fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,8 @@
         "vector": "cpp",
         "fstream": "cpp",
         "random": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "set": "cpp",
+        "xtree": "cpp"
     }
 }
